tests/should-fail/pjass-tests/dont-report-arrays-as-uninitialized.j
function test takes nothing returns string
    local string array s
    return s
endfunction